[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "xcauto"
author = "Radovan Bast"
author-email = "radovan.bast@uit.no"
home-page = "https://github.com/dftlibs/xcauto"
requires=[
    "jax",
    "jaxlib",
]
description-file="README.md"
classifiers = ["License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)"]
